--- a/css/css.css
+++ b/css/css.css
@@ -4,10 +4,6 @@ body
   font-family: 'Dancing Script', cursive;
   color: white;
 }
-img
-{
-
-}
 header
 {
   background-color: #5b7989;
@@ -46,19 +42,49 @@ header nav a:visited
 #imagen-principal
 {
   width: 100%;
+  height: 30%;
   background:#82c3a6
 }
 #imagen-principal img
 {
-  padding-left: 20%
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 /* NOTE: imagenes secundarias */
 #imagen-secundaria
 {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  background-color: #d5c75f;
+  border: 1px;
 }
-.redes-sociales ul li img
+section div img
+{
+  height: 400px;
+  width: 742px;
+}
+#letra1
+{
+text-align: center;
+}
+#letra2
+{
+  text-align: center;
+}
+/* NOTE: footer */
+footer
+{
+  background-color: #C6d5c5;
+  display: flex;
+}
+div [class*="caja"]{
+  min-height: 200px;
+  flex: 1 2 40%;
+  font-size: 3.5vh;
+  color: black;
+}
+.caja3 ul li img
 {
   width: 2%
 }
